--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -1,18 +1,29 @@
 FROM zenika/alpine-chrome:with-node
 
+USER root
+RUN apk update && apk add --no-cache curl
+
 WORKDIR /usr/src/app
 
-# Para puppeteer-core (sin descargas automáticas)
+# Evitar que Puppeteer descargue Chromium (ya viene instalado)
 ENV PUPPETEER_SKIP_DOWNLOAD=true
 
-COPY package.json .
+# Cambiar al usuario chrome ANTES de instalar
+USER chrome
+
+# Copiar package.json con permisos correctos
+COPY --chown=chrome:chrome package.json package-lock.json* ./
+
+# Instalar dependencias
 RUN npm install
 
-COPY e2e-tests.js .
+# Copiar código de pruebas
+COPY --chown=chrome:chrome e2e/ ./e2e/
+COPY --chown=chrome:chrome .env .
 
-COPY .env .
+# Crear carpeta de reportes y permisos
+RUN mkdir -p e2e/reports && chmod -R 777 e2e/reports
 
-RUN mkdir reports
-RUN chmod 777 reports
+# CMD ["npm", "run", "e2e"]
+CMD ["tail", "-f", "/dev/null"]
 
-CMD ["npm", "run", "e2e"]
