--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,16 @@
     "description": "API CRUD de libros usando Express y MongoDB",
     "main": "src/server.js",
     "scripts": {
-        "start": "node src/server.js"
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^7.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.0"
     }
 }
